--- a/index.html
+++ b/index.html
@@ -6,19 +6,26 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+        <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
     </head>
     <body id="field">
         <section class="top-part">
             <h1>Bloc Pong</h1>
             <div class="info">
-                <h3>Use the "Up" and "Down" arrow keys to move your paddle!</h3>
+                <h3>Use the <span class="ion-arrow-up-a"></span> "Up" or <span class="ion-arrow-down-a"></span> "Down" arrow keys to move your paddle!</h3>
+            </div>
+            <div class="legend">
+                <h5><span class="ion-record"></span>Player</h5>
+                <h5><span class="ion-record"></span>Computer</h5>
             </div>
         </section>
         <section class="game-part">
             <canvas id="mainCanvas"></canvas>
         </section>
         <section class="bottom-part">
-            <p>Pong is one of the first computer games that ever created, this simple "tennis like" game features two paddles and a ball, the goal is to defeat your opponent by being the first one to gain10 point, a player gets a point once the opponent misses a ball.</p>
+            <div class="description">
+                <p>Pong is one of the first computer games that ever created, this simple "tennis like" game features two paddles and a ball, the goal is to defeat your opponent by being the first one to gain10 point, a player gets a point once the opponent misses a ball.</p>
+            </div>
         </section>
     <script src="scripts/main.js"></script>
     </body>
