--- a/index.html
+++ b/index.html
@@ -18,8 +18,16 @@
                 <h5><span class="ion-record"></span>Player</h5>
                 <h5><span class="ion-record"></span>Computer</h5>
             </div>
+            <div class="announcements">
+                <h5>Game On!</h5>
+            </div>
         </section>
         <section class="game-part">
+            <div class="score-keep">
+                <h5>0</h5>
+                <h4>  |  </h4>
+                <h5>0</h5>
+            </div>
             <canvas id="mainCanvas"></canvas>
         </section>
         <section class="bottom-part">
