fixed collision issue and imported actual logo

--- a/index.html
+++ b/index.html
@@ -10,16 +10,13 @@
     </head>
     <body id="field">
         <section class="top-part">
-            <h1>Bloc Pong</h1>
+          <img src="assets/images/blocPongLong.png">
             <div class="info">
                 <h3>Use the <span class="ion-arrow-up-a"></span> "Up" or <span class="ion-arrow-down-a"></span> "Down" arrow keys to move your paddle!</h3>
             </div>
             <div class="legend">
                 <h5><span class="ion-record"></span>Player</h5>
                 <h5><span class="ion-record"></span>Computer</h5>
-            </div>
-            <div class="announcements">
-                <h5>Game On!</h5>
             </div>
         </section>
         <section class="game-part">
