added link to personal site

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     </head>
     <body id="field">
         <section class="top-part">
-          <img src="assets/images/blocPongLong.png">
+          <div class="head-contents">
+            <img src="assets/images/blocPongLong.png">
+            <h3>By <a href="https://wyzardsleeves.github.io/personal-site/">Justin Lattimore</a></h3>
+          </div>
             <div class="info">
                 <h3>Use the <span class="ion-arrow-up-a"></span> "Up" or <span class="ion-arrow-down-a"></span> "Down" arrow keys to move your paddle!</h3>
             </div>
