--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Bloc Pong</title>
+        <title>Mock Pong</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" type="text/css" href="styles/main.css">
         <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
@@ -11,7 +11,7 @@
     <body id="field">
         <section class="top-part">
           <div class="head-contents">
-            <img src="assets/images/blocPongLong.png">
+            <img src="assets/images/mockPongLong.png">
             <h3>By <a href="https://wyzardsleeves.github.io/personal-site/">Justin Lattimore</a></h3>
           </div>
             <div class="info">
