hiding bottom part (description)

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </section>
         <section class="bottom-part">
             <div class="description">
-                <p>Pong is one of the first computer games that ever created, this simple "tennis like" game features two paddles and a ball, the goal is to defeat your opponent by being the first one to gain10 point, a player gets a point once the opponent misses a ball.</p>
+                <!-- <p>Pong is one of the first computer games that ever created, this simple "tennis like" game features two paddles and a ball, the goal is to defeat your opponent by being the first one to gain10 point, a player gets a point once the opponent misses a ball.</p> -->
             </div>
         </section>
     <script src="scripts/main.js"></script>
